Added flex to navbar

--- a/index.css
+++ b/index.css
@@ -15,6 +15,24 @@ body {
   background-color: hsl(218, 28%, 13%);
 }
 
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* padding: 10em; */
+}
+
+.navbar-item {
+    color: white;
+    text-decoration: none
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
