--- a/index.css
+++ b/index.css
@@ -13,12 +13,19 @@
 
 body {
   background-color: hsl(218, 28%, 13%);
+  font-family: 'Open Sans', sans-serif;
 }
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 1.5em;
+    padding-left: 1em;
+}
+
+.header-brand {
+    height: 1.5em; 
 }
 
 .navbar-items {
@@ -26,11 +33,15 @@ body {
     justify-content: center;
     align-items: center;
     /* padding: 10em; */
+    font-family: 'Raleway', sans-serif;
 }
 
 .navbar-item {
-    color: white;
-    text-decoration: none
+    padding-left: 1em;
+    padding-right: 1em;
+    color:  rgb(250, 250, 250);
+    text-decoration: none;
+    font-size: smaller;
 }
 
 .attribution {
