--- a/index.css
+++ b/index.css
@@ -47,6 +47,9 @@ body {
 .content {
     display: flex; 
     flex-direction: column;
+    color:  hsl(0, 0%, 100%);
+    align-items: center;
+    text-align: center;
 }
 
 .main-image {
@@ -54,6 +57,8 @@ body {
     padding: 2em;
     padding-top: 2.5em;
 }
+
+
 
 .attribution {
   font-size: 11px;
