style first paragraph and add button content and style

--- a/index.css
+++ b/index.css
@@ -13,50 +13,50 @@
 
 body {
   margin: 0px;
-  background-color:  hsl(217, 28%, 15%);
-  font-family: 'Open Sans', sans-serif;
+  background-color: hsl(217, 28%, 15%);
+  font-family: "Open Sans", sans-serif;
 }
 
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 1.5em;
-    padding-left: 1em;
-    padding-right: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 1.5em;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .header-brand {
-    height: 1.5em; 
+  height: 1.5em;
 }
 
 .navbar-items {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* padding: 10em; */
-    font-family: 'Raleway', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding: 10em; */
+  font-family: "Raleway", sans-serif;
 }
 
 .navbar-item {
-    padding-left: 1em;
-    padding-right: 1em;
-    color:  rgb(250, 250, 250);
-    text-decoration: none;
-    font-size: smaller;
+  padding-left: 1em;
+  padding-right: 1em;
+  color: rgb(250, 250, 250);
+  text-decoration: none;
+  font-size: smaller;
 }
 
 .content {
-    display: flex; 
-    flex-direction: column;
-    color:  hsl(0, 0%, 100%);
-    align-items: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  color: hsl(0, 0%, 100%);
+  align-items: center;
+  text-align: center;
 }
 
 .main-image {
-    height: 14.5em;
-    padding-top: 2.5em;
+  height: 14.5em;
+  padding-top: 2.5em;
 }
 
 .header {
@@ -67,8 +67,44 @@ body {
 }
 
 .sub-header {
-  margin-right: .5em;
-  margin-left: .5em;
+  margin-right: 0.5em;
+  margin-left: 0.5em;
+}
+
+.summary-paragraph {
+  padding: 1em;
+}
+
+.button {
+  background-color: hsl(198, 60%, 50%);
+  width: 14em;
+  padding: 0.7em;
+  border-radius: 9999px;
+  background-image: -webkit-linear-gradient(
+    90deg,
+    hsl(176, 68%, 64%) 0%,
+    hsl(198, 60%, 50%) 100%
+  );
+  background-image: -moz-linear-gradient(
+    90deg,
+    hsl(176, 68%, 64%) 0%,
+    hsl(198, 60%, 50%) 100%
+  );
+  background-image: -ms-linear-gradient(
+    90deg,
+    hsl(176, 68%, 64%) 0%,
+    hsl(198, 60%, 50%) 100%
+  );
+  background-image: -o-linear-gradient(
+    90deg,
+    hsl(176, 68%, 64%) 0%,
+    hsl(198, 60%, 50%) 100%
+  );
+  background-image: linear-gradient(
+    90deg,
+    hsl(176, 68%, 64%) 0%,
+    hsl(198, 60%, 50%) 100%
+  );
 }
 
 .attribution {
