--- a/index.css
+++ b/index.css
@@ -77,9 +77,13 @@ body {
 
 .button {
   background-color: hsl(198, 60%, 50%);
-  width: 14em;
-  padding: 0.7em;
+  width: 18em;
+  padding: 1em;
   border-radius: 9999px;
+  font-size: 0.8em;
+  margin-bottom: 4em;
+  border: none;
+  color: white;
   background-image: -webkit-linear-gradient(
     90deg,
     hsl(176, 68%, 64%) 0%,
@@ -105,6 +109,57 @@ body {
     hsl(176, 68%, 64%) 0%,
     hsl(198, 60%, 50%) 100%
   );
+}
+
+.blurbs {
+  margin-top: 2em;
+}
+
+.main-image {
+  padding-top: 5em;
+}
+
+.stay-productive-blurb {
+  text-align: left;
+  padding-left: 1.5em;
+  padding-right: 1em;
+  padding-bottom: 6em;
+}
+
+a {
+  color: hsl(176, 68%, 64%);
+}
+
+.card-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.card {
+  background-color: hsl(219, 30%, 18%);
+  margin: 1em;
+  text-align: justify;
+}
+
+.rounded {
+  border-radius: 50%;
+  height: 3em;
+}
+
+.person {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.title * {
+  margin: 0px;
 }
 
 .attribution {
