Stylized card text and paddding
Co-authored-by: Lizzie Chan <lchan217@gmail.com>

--- a/index.css
+++ b/index.css
@@ -138,7 +138,10 @@ a {
 .card {
   background-color: hsl(219, 30%, 18%);
   margin: 1em;
-  text-align: justify;
+  text-align: left;
+  padding: 1.5em;
+  font-weight: 400;
+  font-size: 0.8em;
 }
 
 .rounded {
