Added background quotes to card group

--- a/index.css
+++ b/index.css
@@ -135,9 +135,21 @@ a {
   flex-direction: column;
 }
 
+#quote-img {
+  display: flex;
+  justify-content: flex-start;
+  background-repeat: no-repeat;
+  height: 1em;
+  width: 1.6em;
+  margin-left: 1em;
+}
+
 .card {
   background-color: hsl(219, 30%, 18%);
-  margin: 1em;
+  /* margin: 1em; */
+  margin-left: 1em;
+  margin-right: 1em;
+  margin-bottom: 2em;
   text-align: left;
   padding: 1.5em;
   font-weight: 400;
