--- a/index.css
+++ b/index.css
@@ -146,7 +146,6 @@ a {
 
 .card {
   background-color: hsl(219, 30%, 18%);
-  /* margin: 1em; */
   margin-left: 1em;
   margin-right: 1em;
   margin-bottom: 2em;
@@ -181,6 +180,78 @@ a {
 
 .title * {
   margin: 0px;
+}
+
+.early-access {
+  display: flex;
+  flex-direction: column;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+.early-access-header{
+  text-align: center;
+}
+
+.early-access-p {
+  text-align: center;
+  margin: 1.8em;
+}
+
+.email-input::placeholder{
+  color:rgb(200,200,200);
+  padding-left:2em;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+}
+
+.email-input {
+  border-radius: 9999px;
+  width: 100%;
+  height: 3.5em;
+  /*margin-left: 2em; */
+}
+
+.email-button {
+  background-color: hsl(198, 60%, 50%);
+  width: 100%;
+  height: 3.5em;
+  border-radius: 9999px;
+  margin-top: 2em;
+  border: none;
+  color: white;
+  background-image: -webkit-linear-gradient(
+    90deg,
+    hsl(176, 68%, 64%) 0%,
+    hsl(198, 60%, 50%) 100%
+  );
+  background-image: -moz-linear-gradient(
+    90deg,
+    hsl(176, 68%, 64%) 0%,
+    hsl(198, 60%, 50%) 100%
+  );
+  background-image: -ms-linear-gradient(
+    90deg,
+    hsl(176, 68%, 64%) 0%,
+    hsl(198, 60%, 50%) 100%
+  );
+  background-image: -o-linear-gradient(
+    90deg,
+    hsl(176, 68%, 64%) 0%,
+    hsl(198, 60%, 50%) 100%
+  );
+  background-image: linear-gradient(
+    90deg,
+    hsl(176, 68%, 64%) 0%,
+    hsl(198, 60%, 50%) 100%
+  );
+ padding: 0px !important;
+
 }
 
 .attribution {
