--- a/index.css
+++ b/index.css
@@ -256,9 +256,105 @@ form {
 
 }
 
-.footer-logo{
-
+footer {
+  display: flex;
+  flex-direction: column; 
+  padding: 2em;
+  color: white;
 }
+
+.grid {
+  display: grid;
+  /* grid-template: 1fr 1fr 1fr / 1fr 8fr; */
+  grid-template-columns: 1fr 8fr;
+  grid-template-rows: 2fr 1fr 1fr;
+  height: 15em;
+}
+
+.icon {
+  padding-top: 0.3em;
+}
+
+#location-icon {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+}
+
+#phone-icon {
+ grid-row: 2 / 3;
+ grid-column: 1 / 2;
+}
+
+#email-icon {
+  grid-row: 3 / 4;
+  grid-column: 1 / 2;
+}
+
+#location-text { 
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+
+.about {
+  display: flex; 
+  flex-direction: column;
+  margin-top: 4em;
+}
+
+.footer-item {
+  margin-top: 1em;
+  color: white;
+  text-decoration: none;
+}
+
+.contact {
+  display: flex; 
+  flex-direction: column;
+  margin-top: 3em;
+}
+
+.footer-logo{
+height: 2.5em;
+}
+
+.icons {
+  color: white;
+  display: flex; 
+  flex-direction: row; 
+  justify-content: space-between;
+  margin-top: 5em;
+  margin-left:6em;
+  margin-right: 6em;
+  margin-bottom: 2em;
+}
+
+.fb-icon {
+  display: inline-block;
+  border-radius: 60px;
+  border-color: white;
+  border-width: 1px !important;
+  border: solid;
+  padding: 0.5em 0.7em;
+}
+
+.twitter-icon {
+  display: inline-block;
+  border-radius: 60px;
+  border-color: white;
+  border-width: 1px !important;
+  border: solid;
+  padding: 0.5em 0.5em;
+}
+
+.insta-icon {
+  display: inline-block;
+  border-radius: 60px;
+  border-color: white;
+  border-width: 1px !important;
+  border: solid;
+  padding: 0.5em 0.6em;
+}
+
 
 .attribution {
   font-size: 11px;
