--- a/index.css
+++ b/index.css
@@ -185,6 +185,8 @@ a {
 }
 
 .early-access {
+  position: relative;
+  top: 14em;
   display: flex;
   flex-direction: column;
   align-items: center !important;
@@ -261,6 +263,7 @@ footer {
   flex-direction: column; 
   padding: 2em;
   color: white;
+  background-color: hsl(216, 53%, 9%);
 }
 
 .grid {
