--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ body {
   padding-right: 1em;
   color: rgb(250, 250, 250);
   text-decoration: none;
-  font-size: smaller;
+  font-size: 0.7em;
 }
 
 .content {
@@ -67,21 +67,25 @@ body {
 }
 
 .sub-header {
-  margin-right: 0.5em;
-  margin-left: 0.5em;
+  margin-right: 0.7em;
+  margin-left: 0.7em;
+  font-family: "Raleway", sans-serif;
 }
 
 .summary-paragraph {
-  padding: 1em;
+  padding: 0px 1em;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
 }
 
 .button {
   background-color: hsl(198, 60%, 50%);
-  width: 18em;
-  padding: 1em;
+  width: 18.5em;
+  padding: 1.25em;
   border-radius: 9999px;
   font-size: 0.8em;
-  margin-bottom: 4em;
+  margin-top: 2em;
+  margin-bottom: 7.6em;
   border: none;
   color: white;
   background-image: -webkit-linear-gradient(
