--- a/index.css
+++ b/index.css
@@ -225,6 +225,8 @@ a {
   text-align: center;
   margin: .8em;
   padding-bottom: 16px;
+  padding-left: 29px;
+  padding-right: 29px;
 }
 
 .email-input::placeholder{
@@ -299,7 +301,7 @@ footer {
   /* grid-template: 1fr 1fr 1fr / 1fr 8fr; */
   grid-template-columns: 1fr 8fr;
   grid-template-rows: 2fr 1fr 1fr;
-  height: 15em;
+  height: 14em;
 }
 
 .icon {
@@ -316,6 +318,7 @@ footer {
  grid-column: 1 / 2;
 }
 
+
 #email-icon {
   grid-row: 3 / 4;
   grid-column: 1 / 2;
@@ -323,13 +326,21 @@ footer {
 
 #location-text { 
   grid-area: 1 / 2 / 2 / 3;
+  padding-bottom: 13px;
 }
 
+#phone-text{
+  padding-bottom: 13px;
+}
+
+#email-text{
+  padding-bottom: 13px;
+}
 
 .about {
   display: flex; 
   flex-direction: column;
-  margin-top: 4em;
+  margin-top: 2em;
 }
 
 .footer-item {
@@ -341,11 +352,11 @@ footer {
 .contact {
   display: flex; 
   flex-direction: column;
-  margin-top: 3em;
+  margin-top: 2em;
 }
 
 .footer-logo{
-height: 2.5em;
+height: 3.75em;
 margin-bottom: 2em;
 }
 
