--- a/index.css
+++ b/index.css
@@ -118,6 +118,24 @@ body {
   );
 }
 
+@media screen and (min-width: 375px) {
+  .blurbs-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 140px;
+    justify-content: center;
+  }
+
+  .blurbs {
+    margin-top: 2em;
+    margin-bottom: 3.3em;
+    margin-left: 75px;
+    margin-right: 75px;
+    width: 340px;
+  }
+}
+
 .blurbs {
   margin-top: 2em;
   margin-bottom: 3.3em;
@@ -135,13 +153,13 @@ body {
   padding-bottom: 9em;
 }
 
-.definition-paragraph{
+.definition-paragraph {
   font-size: 14px;
 }
 
 h3 {
   font-family: "Raleway", sans-serif;
-  margin: .2em;
+  margin: 0.2em;
   margin-bottom: 0.5em;
 }
 
@@ -174,7 +192,7 @@ a {
   font-weight: 400;
   font-size: 0.8em;
   border-radius: 10px;
-  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3)
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
 }
 
 .rounded {
@@ -208,8 +226,8 @@ a {
   position: relative;
   padding-top: 2.5em !important;
   padding-bottom: 2.5em !important;
-  padding-left: .7em !important;
-  padding-right: .7em !important;
+  padding-left: 0.7em !important;
+  padding-right: 0.7em !important;
   top: 10.4em;
   display: flex;
   flex-direction: column;
@@ -217,21 +235,21 @@ a {
   justify-content: center !important;
 }
 
-.early-access-header{
+.early-access-header {
   text-align: center;
 }
 
 .early-access-p {
   text-align: center;
-  margin: .8em;
+  margin: 0.8em;
   padding-bottom: 16px;
   padding-left: 29px;
   padding-right: 29px;
 }
 
-.email-input::placeholder{
-  color:rgb(200,200,200);
-  padding-left:2em;
+.email-input::placeholder {
+  color: rgb(200, 200, 200);
+  padding-left: 2em;
 }
 
 form {
@@ -281,13 +299,12 @@ form {
     hsl(176, 68%, 64%) 0%,
     hsl(198, 60%, 50%) 100%
   );
- padding: 0px !important;
-
+  padding: 0px !important;
 }
 
 footer {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   margin-top: -3em;
   padding-top: 15em;
   padding-right: 2em;
@@ -314,31 +331,30 @@ footer {
 }
 
 #phone-icon {
- grid-row: 2 / 3;
- grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
 }
-
 
 #email-icon {
   grid-row: 3 / 4;
   grid-column: 1 / 2;
 }
 
-#location-text { 
+#location-text {
   grid-area: 1 / 2 / 2 / 3;
   padding-bottom: 13px;
 }
 
-#phone-text{
+#phone-text {
   padding-bottom: 13px;
 }
 
-#email-text{
+#email-text {
   padding-bottom: 13px;
 }
 
 .about {
-  display: flex; 
+  display: flex;
   flex-direction: column;
   margin-top: 2em;
 }
@@ -350,23 +366,23 @@ footer {
 }
 
 .contact {
-  display: flex; 
+  display: flex;
   flex-direction: column;
   margin-top: 2em;
 }
 
-.footer-logo{
-height: 3.75em;
-margin-bottom: 2em;
+.footer-logo {
+  height: 3.75em;
+  margin-bottom: 2em;
 }
 
 .icons {
   color: white;
-  display: flex; 
-  flex-direction: row; 
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
   margin-top: 5em;
-  margin-left:6em;
+  margin-left: 6em;
   margin-right: 6em;
   margin-bottom: 2em;
 }
@@ -397,7 +413,6 @@ margin-bottom: 2em;
   border: solid;
   padding: 0.5em 0.6em;
 }
-
 
 .attribution {
   font-size: 11px;
