add desktop for navbar and header logo

--- a/index.css
+++ b/index.css
@@ -80,7 +80,6 @@ body {
   margin-block-start: 0px;
   margin-block-end: 0px;
 }
-
 .button {
   background-color: hsl(198, 60%, 50%);
   width: 18.5em;
@@ -118,7 +117,7 @@ body {
   );
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 376px) {
   .blurbs-wrapper {
     display: flex;
     flex-direction: row;
@@ -133,6 +132,26 @@ body {
     margin-left: 75px;
     margin-right: 75px;
     width: 340px;
+  }
+
+  .button {
+    margin-bottom: 0px;
+  }
+
+  .header {
+    width: 740px;
+  }
+  .main-image {
+    width: 750px;
+    height: 550px;
+  }
+  .summary-paragraph {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  .header-brand {
+    height: 38px;
   }
 }
 
